# search-hackathon

./: .gitignore  README.md  analytics.py  api.py  gemini_experiment_results.json  internal_responce_log.json  main.py  package.json  pyproject.toml  requirements.txt  response.json  test_api.py
.cursor/rules/: frontend.mdc
frontend/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  pythonResponse.json
frontend/docs/: frontend1.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/api/analyze/: route.ts
frontend/src/app/api/generate-prompts/: route.ts
frontend/src/components/analytics/: AnalyzingStep.tsx  PromptsStep.tsx  ResultsStep.tsx  URLInputStep.tsx
frontend/src/components/ui/: data-table.tsx  table.tsx
frontend/src/lib/: types.ts
