[project]
name = "hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google>=3.0.0",
    "google-api-python-client>=2.175.0",
    "google-cloud-storage>=3.1.1",
    "google-genai>=1.24.0",
    "googlesearch-python>=1.3.0",
]
