[project]
name = "hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "google>=3.0.0",
    "google-api-python-client>=2.175.0",
    "google-cloud-storage>=3.1.1",
    "google-genai>=1.24.0",
    "googlesearch-python>=1.3.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "uvicorn>=0.24.0",
]
